fixed nav link spacing

--- a/main.css
+++ b/main.css
@@ -1,11 +1,10 @@
 @import "./base.css";
 
-nav {
+nav ul {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
-    justify-content: space-around;
-    border: 2px solid red;
+    justify-content: space-evenly;
 }
 
 main {
